--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ allprojects {
         jcenter()
         maven { url 'https://dl.bintray.com/umsdk/release' }
         maven { url "https://jitpack.io" }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
