增加认证系列页面 增加动态系列页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -241,6 +241,42 @@
             android:configChanges="keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@style/BlackTheme" />
+        <activity
+            android:name=".me.SettingsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
+            android:name=".me.BlacklistActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
+            android:name=".me.AuthenticationActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
+            android:name=".me.GoddessCertificationActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
+            android:name=".me.RealPersonCertificationActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
+            android:name=".me.MyLikeActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
+            android:name=".me.MyDynamicsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
+            android:name=".me.SendDynamicsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
+            android:name=".main.SeePictureActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
     </application>
 
 </manifest>
