--- a/uikit/build.gradle
+++ b/uikit/build.gradle
@@ -53,7 +53,8 @@ dependencies {
 
 //    api 'me.everything:overscroll-decor-android:1.0.4'
     api "me.leolin:ShortcutBadger:1.1.22@aar"
-
+// xpopup   强大的UI弹窗控件
+    api 'com.lxj:xpopup:1.6.5'
     api 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     //api 'jp.wasabeef:glide-transformations:3.0.1'
