完成忘记密码页面UI 针对EditText增加校验

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -199,6 +199,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/BlackTheme"/>
         <activity
+            android:name=".login.ForgetPasswordActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
             android:name=".login.BindPhoneActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BlackTheme"/>
