--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,8 +75,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
-        tools:replace="android:allowBackup"
-        >
+        tools:replace="android:allowBackup">
 
         <!-- map -->
         <activity
@@ -114,11 +113,22 @@
         <!--友盟相关配置-->
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="5dc00866570df3fbdc0001dc" >
+            android:value="${UMENG_APPKEY_VALUE}" >
         </meta-data>
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="guanfang" />
+            android:value="${UMENG_CHANNEL_VALUE}" />
+
+        <!--高德地图-->
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="${AMAP_KEY}" />
+
+        <!-- 华为推送配置 -->
+        <meta-data
+            android:name="com.huawei.hms.client.appid"
+            android:value="${HUAWEI_PUSH_APIKEY}" />
+
         <activity
             android:name="com.yqbj.yhgy.wxapi.WXEntryActivity"
             android:exported="true"
@@ -138,7 +148,7 @@
                    如果 SDKOptions 中提供了，取 SDKOptions 中的值。 -->
         <meta-data
             android:name="com.netease.nim.appKey"
-            android:value="key_of_your_app" />
+            android:value="${NIM_KEY}" />
 
         <!-- 云信后台服务，请使用独立进程。 -->
         <service
@@ -220,6 +230,10 @@
             android:theme="@style/BlackTheme"/>
         <activity
             android:name="com.yqbj.yhgy.me.PerfectDataActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
+            android:name="com.yqbj.yhgy.me.PrivacySettingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BlackTheme"/>
         <activity
