完成设置页面UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -209,6 +209,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/BlackTheme"/>
         <activity
+            android:name="com.yqbj.yhgy.login.ModifyPasswordActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
             android:name="com.yqbj.yhgy.login.ForgetPasswordActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BlackTheme"/>
