--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -260,3 +260,14 @@
 
 -keep class com.wang.avi.** { *; }
 -keep class com.wang.avi.indicators.** { *; }
+
+# 阿里云人脸识别
+-keep class com.taobao.securityjni.**{*;}
+-keep class com.taobao.wireless.security.**{*;}
+-keep class com.ut.secbody.**{*;}
+-keep class com.taobao.dp.**{*;}
+-keep class com.alibaba.wireless.security.**{*;}
+-keep class com.alibaba.security.rp.**{*;}
+-keep class com.alibaba.sdk.android.**{*;}
+-keep class com.alibaba.security.biometrics.**{*;}
+-keep class android.taobao.windvane.**{*;}
