增加平台使用规范，用户使用协议，用户隐私政策三个html文件并引用展示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -300,6 +300,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/BlackTheme"/>
         <activity
+            android:name="com.yqbj.yhgy.me.AgreementActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BlackTheme"/>
+        <activity
             android:name="com.yqbj.yhgy.me.WalletActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BlackTheme"/>
