--- a/uikit/build.gradle
+++ b/uikit/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     // xpopup   强大的UI弹窗控件
     api 'com.lxj:xpopup:1.6.5'
     api 'com.github.bumptech.glide:glide:4.9.0'
+    api 'jp.wasabeef:glide-transformations:2.0.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
